# Script9-Engine

./: .env.example  .gitignore  DEPLOYMENT.md  HANDFOFF_Tempos.md  README.md  Script9_Engine.md  docker-compose.yml  railway.toml
.atl/: skill-registry.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  firebase-credentials.json  pyproject.toml
backend/.venv-test/: envs.toml  pyvenv.cfg
backend/.venv-test/Scripts/: activate  activate.bat
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_webhook_events.py  0003_multi_tenant_schema.py  0004_add_public_slug.py
backend/app/: config.py  config.py,cover  database.py  database.py,cover  main.py  main.py,cover  models.py  models.py,cover
backend/app/api/: __init__.py  __init__.py,cover
backend/app/api/v1/: __init__.py  __init__.py,cover  activity.py  auth.py  cotizaciones.py  health.py  health.py,cover  invitations.py  leads.py  meetings.py  plans.py  public.py  router.py  router.py,cover  stripe.py  stripe.py,cover  usuarios.py  usuarios.py,cover  webhooks.py  webhooks.py,cover
backend/app/api/v1/webhooks/: __init__.py  calendar.py  crm.py
backend/app/dependencies/: __init__.py  tenant.py
backend/app/middleware/: request_id.py
backend/app/schemas/: __init__.py  __init__.py,cover  activity.py  cotizacion.py  health.py  health.py,cover  invitation.py  lead.py  meeting.py  metric.py  stripe.py  stripe.py,cover  usuario.py  usuario.py,cover
backend/app/services/: __init__.py  __init__.py,cover  activity_service.py  email_service.py  lead_scoring.py  logging_service.py  rate_limit.py  slack_service.py  stripe_service.py  usuario_service.py  usuario_service.py,cover
backend/scripts/: generate_openapi.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_auth.py  test_health.py  test_rate_limit.py  test_usuarios.py  test_webhooks.py
backend/tests/middleware/: test_request_id.py
backend/tests/models/: test_usuario_model.py
backend/tests/services/: test_logging_service.py  test_usuario_service.py
docs/: IMPLEMENTATION_STRATEGY.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: client.gen.ts
frontend/src/components/animations/: AnimatedSection.tsx  CardHover.tsx  StaggerChildren.tsx
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx
frontend/src/components/ui/: ActivityCard.tsx  Button.tsx  Card.tsx  Cube3D.tsx  GlassCard.tsx  GlowBackground.tsx  GridBackground.tsx  MetricCard.tsx  MetricNumber.tsx  NeuroSphere.tsx  ProtectedRoute.tsx  SectionHeader.tsx  Sparkline.tsx  TechBadge.tsx  cube3d.css
frontend/src/hooks/: useActivityFeed.ts  useAuth.tsx  useLeads.ts  useLeadsThisWeek.ts  useUsuario.ts
frontend/src/lib/: api-client.ts  errors.ts  firebase.ts  query-client.ts  zod-schemas.ts
frontend/src/pages/: AcceptInvite.tsx  Dashboard.tsx  DemoPage.tsx  LeadForm.tsx  Login.tsx  NotFound.tsx  Planes.tsx  Pricing.tsx  Profile.tsx  Settings.tsx  SuccessPayment.tsx
frontend/src/styles/: animations.css
frontend/tests/e2e/: login.spec.ts
frontend/tests/unit/: smoke.test.ts
